# Arm_manilulation_with_hardware

./: MCU coprocessor I2C communication protocol.xlsx - Communication Protocol.csv  README.md  dofbot_ai_architecture.md  halkubot_implementation_plan_1.md  hulku_control_implementation_plan_2.md.resolved  hulkubot_control_implementation_plan.md.resolved  hulkubot_control_interface_idea  problematic_prompt  readme.md
arm_description/: CMakeLists.txt  package.xml
arm_description/config/: controllers.yaml  map_generation.rviz  mapper_params_online_async.yaml  rviz_config.rviz
arm_description/description/: arm.xacro  bot.urdf.xacro  bot_flat.urdf  gazebo_control.xacro
arm_description/launch/: hardware_test.launch.py  launch_sim.launch.py  robot_bringup.launch.py  rsp.launch.py
arm_moveit_config/: .setup_assistant  package.xml
arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  robot.ros2_control.xacro  robot.srdf  robot.urdf.xacro  ros2_controllers.yaml
arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
custom_interfaces/: CMakeLists.txt  package.xml
docs/: 00_system_architecture.md  01_dofbot_hardware.md  02_dofbot_moveit.md  03_dofbot_urdf.md  04_dofbot_ai.md  05_dofbot_ai_gui.md  06_dofbot_custom_interfaces.md  07_useful_scripts.md  SHOWCASE.md
dofbot_ai/: package.xml  setup.cfg  setup.py
dofbot_ai/config/: agent_config.yaml
dofbot_ai/dofbot_ai/: agent_core.py  agent_node.py
dofbot_ai_gui/: package.xml  setup.cfg  setup.py
dofbot_ai_gui/dofbot_ai_gui/: __init__.py  app.py  main.py
dofbot_custom_interfaces/: CMakeLists.txt  package.xml
dofbot_hardware/: CMakeLists.txt  dofbot_hardware.xml
dofbot_hardware/include/dofbot_hardware/: dofbot_system.hpp
dofbot_hardware/src/: dofbot_system.cpp
dofbot_moveit/: .setup_assistant  CMakeLists.txt  package.xml
dofbot_moveit/config/: dofbot_urdf.ros2_control.xacro  dofbot_urdf.srdf  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
dofbot_moveit/launch/: demo.launch.py  hardware_test.launch.py  move_group.launch.py  moveit_rviz.launch.py  robot_bringup.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
dofbot_urdf/: package.xml
dofbot_urdf/.ipynb_checkpoints/: CMakeLists-checkpoint.txt
dofbot_urdf/launch/: ai_bringup.launch.py  urdf_display.launch.py
dofbot_urdf/meshes/: Camera_Link.STL  Gripping_Link.STL  (+7 more)
franka_ai_implementation/: package.xml  setup.cfg  setup.py
franka_ai_node/: package.xml  setup.cfg  setup.py
franka_ai_node/franka_ai_node/: gui.py  main.py
franka_ai_node/franka_ai_node/stsrc/: llm_client.py  prompts.py
hardware_command_sends/: package.xml  setup.cfg  setup.py
hulku_ai_agent/: package.xml  setup.cfg  setup.py
hulku_ai_gui/: package.xml  setup.cfg  setup.py
hulku_hardware/: CMakeLists.txt  hulku_hardware_plugin.xml  package.xml
hulku_hardware/include/hulku_hardware/: hulku_hardware_interface.hpp
hulku_hardware/src/: hulku_hardware_interface.cpp
hulkubot_arduino_sketch_updated/: hulkubot_arduino_sketch_updated.ino
hulkubot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
py_scripts/: hardware_connection.py  tester.py  tkinter_control.py
useful_scripts/: tkinter_robot_commander.py
(+74 files in other folders)
